# Resilience_paradox

./: .gitignore  README.md  pyproject.toml
.mplconfig/: fontlist-v390.json
config/: countries_eu23.csv  countries_eu23_plusuk.csv  default.toml  nace_to_icio50.csv  shocks.toml
src/resilience_paradox/: __init__.py  cli.py  config.py  logging.py  paths.py  pipeline.py
src/resilience_paradox/data/: crosswalks.py  exposure.py  oecd_download.py  oecd_icio_panels.py  oecd_icio_reader.py  prices.py  stateaid_clean.py  stateaid_db.py  stateaid_download.py  stateaid_panel.py
src/resilience_paradox/models/: __init__.py  fe.py  figures.py  localprojections.py  tables.py
src/resilience_paradox/utils/: hashing.py  http.py  io.py  pandas_helpers.py
tests/: test_config.py  test_crosswalks.py  test_oecd_offline.py  test_oecd_reader_smoke.py  test_pipeline_sample.py
tests/fixtures/: icio_small.csv
